<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.univaq.disim.sealab</groupId>
    <artifactId>easier</artifactId>
    <version>0.6.3</version>
    <name>EASIER</name>
    <description>A multi-objective optimization framework</description>
    <packaging>pom</packaging>
    <modules>
        <module>easier-core</module>
        <module>easier-uml</module>
        <module>easier-epsilon</module>
        <module>easier-uml2lqn</module>
        <module>easier-refactoringLibrary</module>
        <module>easier-uml2lqnCaseStudy</module>
        <module>easier-reliability</module>
    </modules>
    <properties>
        <emf.version>2.15.0</emf.version>
        <jdk.version>11</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <easier.core.version>0.6.3</easier.core.version>
	<openrewrite.maven.plugin>5.28.0</openrewrite.maven.plugin>
	<openrewrite.maven>8.23.3</openrewrite.maven>
	<openrewrite.testing.framework>2.6.0</openrewrite.testing.framework>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${basedir}</directory>
                            <includes>
                                <include>*.jar</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>it.univaq.disim.sealab.metaheuristic.Launcher</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase-->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.common -->
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.common</artifactId>
            <version>${emf.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.ecore -->
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.ecore</artifactId>
            <version>${emf.version}</version>
        </dependency>

        <!-- JUNIT -->
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <!-- <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
             <scope>test</scope>
         </dependency>-->
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.beust</groupId>
            <artifactId>jcommander</artifactId>
            <version>1.72</version>
        </dependency>
    </dependencies>
  <profiles>
  	<profile>
  		<id>openrewrite</id>
  		<build>
  		  <plugins>
  		    <plugin>
  		      <groupId>org.openrewrite.maven</groupId>
  		      <artifactId>rewrite-maven-plugin</artifactId>
  		      <version>5.28.0</version>
  		      <configuration>
  		        <activeRecipes>
				<recipe>org.openrewrite.java.testing.junit5.JUnit4to5Migration</recipe>
				<recipe>it.univaq.spencerlab.AddJfrUnitDependency</recipe>
				<recipe>it.univaq.spencerlab.openrewrite.recipe.AddJfrEventTestAnnotation</recipe>
				<recipe>it.univaq.spencerlab.openrewrite.recipe.AddJfrEventsVariable</recipe>
				<recipe>it.univaq.spencerlab.openrewrite.recipe.AddJDKEventsAnnotationWrapper</recipe>
				<recipe>it.univaq.spencerlab.openrewrite.recipe.AddJfrAwaitEvents</recipe>
  		        </activeRecipes>
  		        <failOnDryRunResults>true</failOnDryRunResults>
			<configLocation>../rewrite.yml</configLocation> <!-- Ensure this path is correct -->
  		      </configuration>
		      <dependencies>
		          <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-testing-frameworks</artifactId>
		            <version>2.6.0</version>
		          </dependency>
			  <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-static-analysis</artifactId>
		            <version>1.4.2</version>
		          </dependency>
			  <dependency>
				  <groupId>org.openrewrite</groupId>
				  <artifactId>rewrite-maven</artifactId>
				  <version>8.23.1</version>
			  </dependency>
			  <dependency>
				  <groupId>org.openrewrite</groupId>
				  <artifactId>rewrite-java</artifactId>
				  <version>8.23.1</version>
			  </dependency>
			  <dependency>
				  <groupId>org.michele</groupId>
				  <artifactId>michele-JfrUnit</artifactId>
				  <version>0.0.1-SNAPSHOT</version>
			  </dependency>
    	             </dependencies>
  		    </plugin>
  		  </plugins>
  		</build>
  	</profile>
  </profiles>
</project>
